sync profile
